NULL=

noinst_LIBRARIES = librecent.a

INCLUDES = $(EOG_CFLAGS)

librecent_a_SOURCES =		\
	egg-recent-model.c	\
	egg-recent-model.h	\
	egg-recent-item.c	\
	egg-recent-item.h       \
	egg-recent-util.c	\
	egg-recent-util.h	\
	egg-recent-view.c	\
	egg-recent-view.h	\
	egg-recent-view-bonobo.c	\
	egg-recent-view-bonobo.h	\
	$(NULL)
